# GameOfLifeSFML

./: CMakeLists.txt  README.md  board.cpp  board.h  cell.cpp  cell.h  main.cpp
SFML-2.5.1/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
SFML-2.5.1/lib/cmake/SFML/: SFMLSharedTargets.cmake
SFML-2.5.1/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
